src/objects/ffbc__SoftDate__c.object
<CustomObject>
    <customHelpPage>ffbc__softdatehelp</customHelpPage>
    <description>Represents a soft date</description>
    <fields>
        <fullName>ffbc__Definition__c</fullName>
        <description>Defines a date using the format Reference+Adjustment. Reference sets whether the date falls at the start or end of a week, month, year or quarter. +Adjustment is the number of days or months to add or subtract.</description>
        <inlineHelpText>Defines a date using the format Reference+Adjustment. Reference determines whether the date falls at the start or end of a period. +Adjustment is the number of days or months to add or subtract. You can enter a Reference, Adjustment or both.</inlineHelpText>
        <label>Definition</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__Description__c</fullName>
        <description>Description of the soft date.</description>
        <inlineHelpText>Description of the soft date.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__EstimatedDaysPerTerm__c</fullName>
        <description>Estimated duration of a single term of the soft date. This is used to calculate the monthly and annual value of contracts and plans.</description>
        <inlineHelpText>Estimated duration of a single term of the soft date. This is used to calculate the monthly and annual value of contracts and plans.</inlineHelpText>
        <label>Estimated Days per Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__MrrMultiplier__c</fullName>
        <description>Multiplier used to calculate monthly recurring revenue. Must contain a positive number.</description>
        <inlineHelpText>Multiplier used to calculate monthly recurring revenue. You must enter a positive number.</inlineHelpText>
        <label>Monthly Recurring Revenue Multiplier</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Soft Date</label>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__Definition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Soft Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Soft Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>